--- a/sass/layout/_contacts.sass
+++ b/sass/layout/_contacts.sass
@@ -1,4 +1,2 @@
 #contacts
-  .container
-    form
-      div
+  padding: 3em 0
