--- a/sass/layout/_header.sass
+++ b/sass/layout/_header.sass
@@ -1,6 +1,6 @@
 .main-header
   position: fixed
-  z-index: 100
+  z-index: 1
 
   .mdl-navigation__link
       font-weight: bold
